Issue #5247: Improve error message when unknown format codes are used when using str.format() with str, unicode, long, int, and float arguments.